@@ -32,14 +32,6 @@ This file is generated automagicaly by gen_known_bugs.pl script.
   <td>tecodev</td>
 </tr>
 <tr bgcolor="#dababa">
-  <td> 1723128 </td>
-  <td><a href="http://sourceforge.net/tracker/index.php?func=detail&amp;aid=1723128&amp;group_id=599&amp;atid=100599"> Code compiles 2.6.0 but causes fatal error on 2.7.0 </a></td>
-  <td>2007-05-21 16:10 </td>
-  <td align="center"> 5 </td>
-  <td>nobody</td>
-  <td>grahamnz</td>
-</tr>
-<tr bgcolor="#dababa">
   <td> 1717943 </td>
   <td><a href="http://sourceforge.net/tracker/index.php?func=detail&amp;aid=1717943&amp;group_id=599&amp;atid=100599"> wrong optimized flow </a></td>
   <td>2007-05-12 16:32 </td>
